--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "@shopify/shopify-express",
   "version": "1.0.0",
   "author": "Shopify Inc.",
-  "description":
-    "Get up and running quickly with Express.js and the Shopify API.",
-  "keywords": ["shopify", "express.js", "express middleware"],
+  "description": "Get up and running quickly with Express.js and the Shopify API.",
+  "keywords": [
+    "shopify",
+    "express.js",
+    "express middleware"
+  ],
   "bugs": "https://github.com/Shopify/shopify-express/issues",
   "license": "MIT",
   "repository": {
@@ -13,10 +16,8 @@
   },
   "main": "build/index.js",
   "scripts": {
-    "prettier:check":
-      "prettier-check --single-quote --trailing-comma=all {middleware,routes,shopStore}{/*,/**/*}.{js}",
-    "prettier:fix":
-      "prettier --single-quote --trailing-comma=all --write {middleware,routes,shopStore}{/*,/**/*}.{js}",
+    "prettier:check": "prettier-check --single-quote --trailing-comma=all {middleware,routes,shopStore}{/*,/**/*}.{js}",
+    "prettier:fix": "prettier --single-quote --trailing-comma=all --write {middleware,routes,shopStore}{/*,/**/*}.{js}",
     "precommit": "lint-staged",
     "test": "jest",
     "test:ci": "jest --ci",
@@ -24,7 +25,9 @@
     "postinstall": "npm run-script babel"
   },
   "lint-staged": {
-    "*.{js}": ["prettier:check"]
+    "*.{js}": [
+      "prettier:check"
+    ]
   },
   "publishConfig": {
     "access": "public"
@@ -41,7 +44,7 @@
     "node-fetch": "^1.7.3",
     "prop-types": "^15.6.1",
     "raw-body": "^2.3.2",
-    "sqlite3": "^3.1.9",
+    "sqlite3": "^4.1.0",
     "url": "^0.11.0"
   },
   "devDependencies": {
