--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "node-fetch": "^1.7.3",
     "prop-types": "^15.6.1",
     "raw-body": "^2.3.2",
-    "sqlite3": "^4.1.0",
+    "sqlite3": "3.1.13",
     "url": "^0.11.0"
   },
   "devDependencies": {
